[tool.poetry]
name = "puca"
version = "0.1.0"
description = ""
authors = ["tom mcandrew <mcandrew@lehigh.edu>"]
readme = "README.md"
packages = [
    { include = "puca" }
]


[tool.poetry.dependencies]
python = "^3.10"
jax = "0.4.34"
pandas = "^2.3.3"
epiweeks = "^2.3.0"
argparse = "^1.4.0"
matplotlib = "^3.10.8"
jaxlib = "0.4.34"
numpyro = "^0.19.0"
scienceplots = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
